--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.21.9",
   "private": false,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.3.0",
@@ -57,5 +60,4 @@
     "*.{js,jsx}": "eslint --cache",
     "*.css": "stylelint"
   }
-
 }
